tests/regression/error/hw5_error12.nex
var f;
   f = anon() { } + 1;
